cabal-version:      3.0
name:               cardano-constitution
version:            1.30.0.0
license:            Apache-2.0
license-files:
  LICENSE
  NOTICE

maintainer:         nikolaos.bezirgiannis@iohk.io
author:             Plutus Core Team
synopsis:           Cardano's Constitution
description:        The Cardano's Constitution plutus script part
category:           Language
build-type:         Simple
extra-doc-files:    README.md
extra-source-files:
  data/defaultConstitution.json
  data/defaultConstitution.schema.json

source-repository head
  type:     git
  location: https://github.com/IntersectMBO/constitution-priv

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -Wunused-packages -Wmissing-deriving-strategies -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fno-strictness

common ghc-version-support
  -- See the section on GHC versions in CONTRIBUTING
  if (impl(ghc <9.6) || impl(ghc >=9.7))
    buildable: False

library
  import:           lang, ghc-version-support
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:
    Cardano.Constitution.Config
    Cardano.Constitution.Config.Instance.FromJSON
    Cardano.Constitution.Config.Instance.TxLift
    Cardano.Constitution.Config.Types
    Cardano.Constitution.DataFilePaths
    Cardano.Constitution.Validator
    Cardano.Constitution.Validator.Common
    Cardano.Constitution.Validator.Sorted
    Cardano.Constitution.Validator.Unsorted
    PlutusTx.NonCanonicalRational

  build-depends:
    , aeson
    , base               >=4.9   && <5
    , containers
    , filepath
    , plutus-core        ^>=1.30
    , plutus-ledger-api  ^>=1.30
    , plutus-tx          ^>=1.30
    , plutus-tx-plugin   ^>=1.30
    , safe
    , template-haskell
    , regex-tdfa

test-suite cardano-constitution-test
  import:           lang, ghc-version-support
  hs-source-dirs:   test
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  type:             exitcode-stdio-1.0
  main-is:            Driver.hs
  other-modules:
    , Cardano.Constitution.Config.Tests
    , Cardano.Constitution.Validator.GoldenTests
    , Cardano.Constitution.Validator.PropTests
    , Cardano.Constitution.Validator.UnitTests
    , Cardano.Constitution.Validator.TestsCommon
    , PlutusLedgerApi.V3.ArbitraryContexts
    , Helpers.TestBuilders
    , Helpers.Guardrail
    , Helpers.Intervals
    , Helpers.Spec.IntervalSpec
    , Helpers.Spec.FareySpec
    , Helpers.Farey
    , Helpers.MultiParam
    , Helpers.CekTests

  build-depends:
    , base               >=4.9   && <5
    , cardano-constitution:cardano-constitution  ^>=1.30
    , plutus-core:{plutus-core, plutus-core-testlib} ^>= 1.30
    , plutus-tx ^>=1.30
    , plutus-ledger-api ^>=1.30
    , tasty
    , tasty-quickcheck
    , tasty-hunit
    , tasty-json
    , QuickCheck
    , containers
    , bytestring
    , aeson
    , tasty-expected-failure
    , tasty-golden
    , filepath
    , directory
    , serialise
